파티션 할당 컨슈머까지